added header information and skeleton for main

--- a/index.html
+++ b/index.html
@@ -8,9 +8,50 @@
     </head>
 
     <body>
-        <header class="header">
-
+        <header>
+            <!-- name -->
+            <section class="card-name">Erick Avalos</section>
+            <!-- define the navigation bar -->
+            <section class="nav">
+                <ul>
+                    <!-- about me listed item -->
+                    <li>
+                        <a href="#about-me">About Me</a>
+                    </li>
+                    <!-- experience listed item -->
+                    <li>
+                        <a href="#experience">Experience</a>
+                    </li>
+                    <!-- contact me lited item -->
+                    <li>
+                        <a href="#contact-me">Contact Me</a>
+                    </li>
+                </ul>
+                <!-- add bar vertically after navigation bar -->
+                <hr class="rounded">
+            </section>
         </header>
+        <!-- add bar after header -->
+        <hr class="rounded"></hr>
+
+        <!-- define the main section for about me, experience and contact information -->
+       <main>
+            <!-- about me subsection -->
+            <section id="#about-me" class="info-base">
+
+            </section>
+            <!-- experience subsection -->
+            <section id="#experience" class="info-base">
+
+            </section>
+
+            <!-- contact me subsection -->
+            <section id="#contact-me" class="info-base">
+
+            </section>
+
+            
+       </main>
        
     </body>
 
