backing up work

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                     </li>
                 </ul>
                 <!-- add bar vertically after navigation bar -->
-                <hr class="rounded">
             </section>
         </header>
         <!-- add bar after header -->
@@ -37,18 +36,76 @@
         <!-- define the main section for about me, experience and contact information -->
        <main>
             <!-- about me subsection -->
-            <section id="#about-me" class="info-base">
+            <section id="about-me" class="info-base">
+                <!-- add about me sub title -->
+                <div class="sub-title">
+                    About Me    
+                </div>
+                <!-- add boarder after about me  -->
+                <hr class="rounded"></hr>
+
+                <!-- divider for image and paragraph introducing me -->
+                <div class="desc-about-me">
+                    <img src="./assets/images/personal.jpg" alt="Personal Image"> </img>
+                    <p>
+                        I am a Software Engineer for a defensive contractor called Epsilon C5I. In June, 2020, I graduated from UCLA with a 
+                        Bachelors in Electrical Engineering with a specialization in Signals and Systems. In 2018, I had an opportunity to 
+                        intern at Northrop Grumman for two years. During my time there, I worked on embedded software development programs
+                        that further enhanced my software development skills. 
+                    </p>
+                </div>
 
             </section>
+
+            <!-- add bar after header -->
+            <hr class="rounded"></hr>
             <!-- experience subsection -->
-            <section id="#experience" class="info-base">
+            <section id="experience" class="info-base">
+                <div class="sub-title">
+                    Experience
+                </div>
 
+                <!-- add boarder after about me  -->
+                <hr class="rounded"></hr>
+
+                <!-- main image -->
+                <div class="experiences">
+                    <section class="card-main">
+                        <a href="https://eavalo14.github.io/module-1/">
+                            <img src="./assets/images/module-1-webpage.png" alt="module 1"> </img>
+                            <section class="card-section">
+                                Module 1 Activity
+                            </section>
+                        </a>
+                    </section>
+                    <div class="block-test">
+                        <section class="card-sub">
+                            <a href="https://minter-machine.herokuapp.com">
+                                <img src="./assets/images/minter-machine.png" alt="module 1"> </img>
+                            </a>
+                            <section class="card-section">
+                                Module 1 Activity
+                            </section>
+                        </section>
+                    </div>
+
+                </div>
             </section>
+
+            <!-- add bar after header -->
+            <hr class="rounded"></hr>
 
             <!-- contact me subsection -->
-            <section id="#contact-me" class="info-base">
-
+            <section id="contact-me" class="info-base">
+                <div class="sub-title">
+                    Contact Me
+                </div>
+                <!-- add boarder after about me  -->
+                <hr class="rounded"></hr>
             </section>
+            
+            <!-- add bar after header -->
+            <hr class="rounded"></hr>
 
             
        </main>
