adding updates to project

--- a/index.html
+++ b/index.html
@@ -72,13 +72,22 @@
                 <div class="experiences">
                     <section class="card-main">
                         <a href="https://eavalo14.github.io/module-1/">
-                            <img src="./assets/images/module-1-webpage-small.png" alt="module 1"> </img>
+                            <img src="./assets/images/marvel.png" alt="module 1"> </img>
                             <section class="card-section">
-                                Module 1 Activity
+                               Marvel Geeks Search
                             </section>
                         </a>
                     </section>
                     <div>
+                        <section class="card-sub">
+                            <a href="https://minter-machine.herokuapp.com">
+                                <img src="./assets/images/module-1-webpage-small.png" alt="minter machine"> </img>
+                                <section class="card-section">
+                                    Module 1 Activity
+                                </section>
+                            </a>
+                        </section>
+                        
                         <section class="card-sub">
                             <a href="https://minter-machine.herokuapp.com">
                                 <img src="./assets/images/minter-machine-small.png" alt="minter machine"> </img>
@@ -95,6 +104,7 @@
                                 </section>
                             </a>
                         </section>
+                        
                     </div>
 
                 </div>
