--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <!--Links Corresponding CSS stylesheet -->
         <link rel="stylesheet" href="./assets/css/style.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         <title>Personal Portfolio</title>
     </head>
 
@@ -69,33 +70,35 @@
                 <hr class="rounded"></hr>
 
                 <!-- main image -->
-                <div class="experiences">
+                <div class="experiences mb-2">
                     <section class="card-main">
-                        <a href="https://eavalo14.github.io/module-1/">
-                            <img src="./assets/images/marvel.png" alt="module 1"> </img>
+                        <a href="https://only-recipes-app.herokuapp.com/">
+                            <img src="./assets/images/only-recipes.png" alt="only-recipes"> </img>
                             <section class="card-section">
-                               Marvel Geeks Search
+                                Only Recipes
                             </section>
                         </a>
                     </section>
                     <div>
+
                         <section class="card-sub">
-                            <a href="https://minter-machine.herokuapp.com">
+                            <a href="https://wiilki.github.io/marvel-geeks-fandom-page/">
+                                <img src="./assets/images/marvel.png" alt="minter machine"> </img>
+                                <section class="card-section">
+                                    Marvel Geeks Search
+                                </section>
+                            </a>
+                        </section>
+                        
+                        <section class="card-sub">
+                            <a href="https://erickjavalos.github.io/module-1/">
                                 <img src="./assets/images/module-1-webpage-small.png" alt="minter machine"> </img>
                                 <section class="card-section">
                                     Module 1 Activity
                                 </section>
                             </a>
                         </section>
-                        
-                        <section class="card-sub">
-                            <a href="https://minter-machine.herokuapp.com">
-                                <img src="./assets/images/minter-machine-small.png" alt="minter machine"> </img>
-                                <section class="card-section">
-                                    Multi-Signature Cardano Minting System
-                                </section>
-                            </a>
-                        </section>
+
                         <section class="card-sub">
                             <a href="https://twitter.com/cardanobugsbot">
                                 <img src="./assets/images/real-time-twitter-sales-bot.png" alt="twitter bot"> </img>
